--- a/ch.ipynb
+++ b/ch.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
@@ -25,12 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['SC', 'RS', 'PR'], dtype=object)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db = pd.read_csv(\"desafio1.csv\")\n",
-    "estados_disponiveis = db[\"estado_residencia\"].unique()"
+    "estados_disponiveis = db[\"estado_residencia\"].unique()\n",
+    "estados_disponiveis"
    ]
   },
   {
@@ -45,9 +58,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -58,282 +69,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_by_state = {}\n",
+    "for estado in estados_disponiveis:\n",
+    "    db_by_state[estado] = db[db[\"estado_residencia\"] == estado][\"pontuacao_credito\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculando Dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RowNumber</th>\n",
-       "      <th>id</th>\n",
-       "      <th>sobrenome</th>\n",
-       "      <th>pontuacao_credito</th>\n",
-       "      <th>estado_residencia</th>\n",
-       "      <th>genero</th>\n",
-       "      <th>idade</th>\n",
-       "      <th>nivel_estabilidade</th>\n",
-       "      <th>saldo_conta</th>\n",
-       "      <th>numero_produtos</th>\n",
-       "      <th>possui_cartao_de_credito</th>\n",
-       "      <th>membro_ativo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>e7f44fcbd380d4cef7e6c232cc7e37895c3fd197</td>\n",
-       "      <td>6d6e0aa1b9b413e442e2fb68df14b4fc3f91de50</td>\n",
-       "      <td>619</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>774bc378f787438c9c7594e536787d07a097a54b</td>\n",
-       "      <td>f2b29d5d934de615812b697132e767dea0f1e9e2</td>\n",
-       "      <td>502</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>42</td>\n",
-       "      <td>8</td>\n",
-       "      <td>159660.80</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>043a71326f7096de155e7f0c559dc62b5e4b7239</td>\n",
-       "      <td>85d5c9da7cddd8109ad32a6c348fe2bb10bf99f2</td>\n",
-       "      <td>699</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>8f3cc64a0a84bab38fefb030f09757d0cbf03bb2</td>\n",
-       "      <td>abec3e525ab40e45975c91d4fa2bc7b318d93de4</td>\n",
-       "      <td>822</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>M</td>\n",
-       "      <td>50</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>35f41954a87f722a3960e5fa8ce898a09398a564</td>\n",
-       "      <td>53a417796c777851003b3f2431e8eef5625ec15b</td>\n",
-       "      <td>501</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>M</td>\n",
-       "      <td>44</td>\n",
-       "      <td>4</td>\n",
-       "      <td>142051.07</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6993</th>\n",
-       "      <td>6994</td>\n",
-       "      <td>4abefa8b416d1a633521dba183e34fefb2ece611</td>\n",
-       "      <td>f8a2304458044e0b5a4852d672e99f004048a843</td>\n",
-       "      <td>639</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>103015.12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6994</th>\n",
-       "      <td>6995</td>\n",
-       "      <td>a934dfa54a92830fd2c33b533c26d499704a0f9f</td>\n",
-       "      <td>b4b66826bb3faec194006ded5a732341cbc194f4</td>\n",
-       "      <td>557</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>24</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6995</th>\n",
-       "      <td>6996</td>\n",
-       "      <td>3e607c788c09d6e1f99cc50575e471fee41a322a</td>\n",
-       "      <td>ef547badb8b0801d06a93155cc052341c749d1c0</td>\n",
-       "      <td>633</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>F</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>104001.38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6997</th>\n",
-       "      <td>6998</td>\n",
-       "      <td>6a0589e36c12f95a8d3678b460519ed654fe0a3e</td>\n",
-       "      <td>e65e12a7eb4e0b15e6d3afb127ce38c0a5303188</td>\n",
-       "      <td>611</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>M</td>\n",
-       "      <td>68</td>\n",
-       "      <td>5</td>\n",
-       "      <td>82547.11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6999</th>\n",
-       "      <td>7000</td>\n",
-       "      <td>cdce83890ea1d7b64b2caaaea76f499cb5dfe684</td>\n",
-       "      <td>2265b3657cc5e97382dc46819e3937c363fe165e</td>\n",
-       "      <td>521</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>M</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>121325.84</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3519 rows × 12 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      RowNumber                                        id  \\\n",
-       "0             1  e7f44fcbd380d4cef7e6c232cc7e37895c3fd197   \n",
-       "2             3  774bc378f787438c9c7594e536787d07a097a54b   \n",
-       "3             4  043a71326f7096de155e7f0c559dc62b5e4b7239   \n",
-       "6             7  8f3cc64a0a84bab38fefb030f09757d0cbf03bb2   \n",
-       "8             9  35f41954a87f722a3960e5fa8ce898a09398a564   \n",
-       "...         ...                                       ...   \n",
-       "6993       6994  4abefa8b416d1a633521dba183e34fefb2ece611   \n",
-       "6994       6995  a934dfa54a92830fd2c33b533c26d499704a0f9f   \n",
-       "6995       6996  3e607c788c09d6e1f99cc50575e471fee41a322a   \n",
-       "6997       6998  6a0589e36c12f95a8d3678b460519ed654fe0a3e   \n",
-       "6999       7000  cdce83890ea1d7b64b2caaaea76f499cb5dfe684   \n",
-       "\n",
-       "                                     sobrenome  pontuacao_credito  \\\n",
-       "0     6d6e0aa1b9b413e442e2fb68df14b4fc3f91de50                619   \n",
-       "2     f2b29d5d934de615812b697132e767dea0f1e9e2                502   \n",
-       "3     85d5c9da7cddd8109ad32a6c348fe2bb10bf99f2                699   \n",
-       "6     abec3e525ab40e45975c91d4fa2bc7b318d93de4                822   \n",
-       "8     53a417796c777851003b3f2431e8eef5625ec15b                501   \n",
-       "...                                        ...                ...   \n",
-       "6993  f8a2304458044e0b5a4852d672e99f004048a843                639   \n",
-       "6994  b4b66826bb3faec194006ded5a732341cbc194f4                557   \n",
-       "6995  ef547badb8b0801d06a93155cc052341c749d1c0                633   \n",
-       "6997  e65e12a7eb4e0b15e6d3afb127ce38c0a5303188                611   \n",
-       "6999  2265b3657cc5e97382dc46819e3937c363fe165e                521   \n",
-       "\n",
-       "     estado_residencia genero  idade  nivel_estabilidade  saldo_conta  \\\n",
-       "0                   SC      F     42                   2         0.00   \n",
-       "2                   SC      F     42                   8    159660.80   \n",
-       "3                   SC      F     39                   1         0.00   \n",
-       "6                   SC      M     50                   7         0.00   \n",
-       "8                   SC      M     44                   4    142051.07   \n",
-       "...                ...    ...    ...                 ...          ...   \n",
-       "6993                SC      F     35                   1    103015.12   \n",
-       "6994                SC      F     24                   4         0.00   \n",
-       "6995                SC      F     32                   1    104001.38   \n",
-       "6997                SC      M     68                   5     82547.11   \n",
-       "6999                SC      M     27                   4    121325.84   \n",
-       "\n",
-       "      numero_produtos  possui_cartao_de_credito  membro_ativo  \n",
-       "0                   1                         1             1  \n",
-       "2                   3                         1             0  \n",
-       "3                   2                         0             0  \n",
-       "6                   2                         1             1  \n",
-       "8                   2                         0             1  \n",
-       "...               ...                       ...           ...  \n",
-       "6993                2                         1             1  \n",
-       "6994                1                         0             0  \n",
-       "6995                1                         0             1  \n",
-       "6997                2                         1             1  \n",
-       "6999                1                         1             1  \n",
-       "\n",
-       "[3519 rows x 12 columns]"
+       "{'SC': {'moda': 850.0,\n",
+       "  'mediana': 653.0,\n",
+       "  'media': 649.5376527422563,\n",
+       "  'desvio_padrao': 97.233492793433},\n",
+       " 'RS': {'moda': 850.0,\n",
+       "  'mediana': 650.0,\n",
+       "  'media': 651.1051428571428,\n",
+       "  'desvio_padrao': 95.13659841383574},\n",
+       " 'PR': {'moda': 850.0,\n",
+       "  'mediana': 650.0,\n",
+       "  'media': 648.9612940496822,\n",
+       "  'desvio_padrao': 98.60718591309758}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db_by_state = {}\n",
+    "answer = {}\n",
     "for estado in estados_disponiveis:\n",
-    "    db_by_state[estado] = db[db[\"estado_residencia\"] == estado]\n",
-    "\n",
-    "db_by_state['SC']"
+    "    answer[estado] = {\n",
+    "      \"moda\": float(db_by_state[estado].mode()[0]),\n",
+    "      \"mediana\": float(db_by_state[estado].median()),\n",
+    "      \"media\": float(db_by_state[estado].mean()),\n",
+    "      \"desvio_padrao\": float(db_by_state[estado].std()),\n",
+    "    }\n",
+    "answer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Colocando Resultado do submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"submission.json\", \"w\") as file:\n",
+    "    content = json.dump(answer, file)\n"
    ]
   }
  ],
